Desafio back-end

--- a/testbackend/src/main/resources/application.properties
+++ b/testbackend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=${port:8080}
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/agendae
+spring.datasource.url= jdbc:postgresql://localhost:5432/backend
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
